# project-web-sge

./: .flake8  .gitignore  CONTRIBUTORS.txt  LICENCE.txt  README.md  docker-compose.local.yml  docker-compose.production.yml  justfile  pyproject.toml
.envs/.local/: .env.example
.envs/.production/: .env.example
compose/local/django/: Dockerfile  start.sh
compose/production/django/: Dockerfile  entrypoint.sh  start.sh
compose/production/nginx/: Dockerfile  default.conf
compose/production/postgres/: Dockerfile
compose/production/traefik/: Dockerfile  traefik.yml
config/: urls.py  views.py
config/settings/: base.py  local.py  production.py  test.py
